align kubernetes icon, highlights user guide correctly in navigation

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -2,6 +2,10 @@
 .docs-container {
   max-width: 64.875rem;
   margin: 0 auto;
+
+  p {
+    max-width: none;
+  }
 }
 
 .p-navigation {
